# housing-broker-management-system

./: .gitignore  CMakeLists.txt  README.md  main.c  platform_compat.h  rental_system.c  rental_system.h  rental_system_cli  storage.c  storage.h  ui_utils.h
include/: bootstrap_data.h  data_path_utils.h  demo_data.h  domain_utils.h  login_guard.h  password_utils.h  platform_compat.h  rental_system.h  storage.h  ui_utils.h
src/app/: main.c
src/core/: rental_system.c  storage.c
src/modules/: bootstrap_data.c  data_path_utils.c  demo_data.c  domain_utils.c  login_guard.c  password_utils.c
